# mls-implementations

./: .gitignore  README.md  go.mod  implementation_list.md  test-config.md  test-harness.md  test-scenarios.md  test-vectors.md
docker/: Dockerfile.mlspp  Dockerfile.openmls  Dockerfile.test-runner  README.md  docker-compose.yml
interop/: .gitignore  Makefile  README.md  active_to_passive.js  active_to_passive.sh  config.json  deep.py
interop/configs/: application.json  branch.json  commit.json  deep_random.json  external_join.json  external_proposals.json  generate_handle_commit.json  reinit.json  welcome_join.json
interop/cpp-mock-client/: CMakeLists.txt  Makefile  README.md  mock_client.cpp
interop/go-mock-client/: main.go
interop/passive/: application.json  branch.json  commit.json  external_join.json  external_proposals.json  reinit.json  welcome_join.json
interop/proto/: mls_client.pb.go  mls_client.proto  mls_client_grpc.pb.go
interop/proto/rust-proto/: .gitignore  Cargo.toml  build.rs
interop/proto/rust-proto/src/: lib.rs
interop/rust-mock-client/: Cargo.toml
interop/rust-mock-client/src/: main.rs
interop/test-runner/: main.go
test-vectors/: crypto-basics.json  deserialization.json  key-schedule.json  message-protection.json  messages.json  parent_hash.json  passive-client-handling-commit.json  passive-client-proposals.json  passive-client-welcome.json  passive-client.json  passive_client_scenarios.json  psk_secret.json  secret-tree.json  transcript-hashes.json  transcript.json  transcripts-hashes.json  treekem.json  welcome.json
test_vectors/: README.md  ecies.md  treemath.md  treesnodes.md  userinitkey.md
treemath/: README.md
