[package]
name = "rust-mock-client"
version = "0.1.0"
authors = ["Richard Barnes <rlb@ipv.sx>"]
edition = "2018"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "3", features = ["derive"] }
thiserror = "1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[build-dependencies]
tonic-build = "0.7"
